--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>Turtle Graphics Online - Actua</title>
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
@@ -17,6 +17,7 @@
   <script src="http://www.skulpt.org/static/skulpt-stdlib.js" type="text/javascript"></script>
 
   <script src="/javascripts/util.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
 
   <!-- Enable online Turtle graphics
         Shamelessly taken from: http://skulpt.org
@@ -39,8 +40,11 @@
       // get a reference to your pre element for output
       // configure the output function
       // call Sk.importMainWithBody()
-      function runit() {
-          var prog = document.getElementById("yourcode").value;
+      function runitHidden() {
+          var prog = document.getElementById("yourcode").innerText;
+
+          console.log(prog);
+
           var mypre = document.getElementById("output");
           mypre.innerHTML = '';
           Sk.pre = "output";
@@ -53,9 +57,16 @@
                       console.log('success');
                   },
                   function(err) {
+                      showError(err.toString());
                       console.log(err.toString());
                   });
       }
+  </script>
+
+  <script>
+      var editor = ace.edit("yourcode");
+      editor.setTheme("ace/theme/textmate");
+      editor.getSession().setMode("ace/mode/python");
   </script>
 
 </html>
