--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 #mycanvas {
 
     border : 1px solid grey;
+    border-radius: 5px;
 
     height: 400px;
     width: 400px;
@@ -13,8 +14,4 @@
 #output{
     display:none;
     height:400px;
-}
-
-textarea {
-    resize: none;
 }
