--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,18 +16,29 @@
   <script src="http://www.skulpt.org/static/skulpt.min.js" type="text/javascript"></script>
   <script src="http://www.skulpt.org/static/skulpt-stdlib.js" type="text/javascript"></script>
 
-  <script src="/javascripts/util.js" type="text/javascript"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
 
   <!-- Enable online Turtle graphics
         Shamelessly taken from: http://skulpt.org
    -->
 
+  <script>
+      var editor = ace.edit("yourcode");
+      editor.setTheme("ace/theme/textmate");
+      editor.getSession().setMode("ace/mode/python");
+      editor.getSession().setTabSize(4);
+      editor.gotoLine(editor.session.getLength());
+  </script>
+
+  <script src="/javascripts/util.js" type="text/javascript"></script>
+  <script src="/javascripts/examples.js" type="text/javascript"></script>
+
   <script type="text/javascript">
       // output functions are configurable.  This one just appends some text
       // to a pre element.
       function outf(text) {
-          var mypre = document.getElementById("output");
+          var mypre = editor.getValue();
           mypre.innerHTML = mypre.innerHTML + text;
       }
       function builtinRead(x) {
@@ -61,12 +72,6 @@
                       console.log(err.toString());
                   });
       }
-  </script>
-
-  <script>
-      var editor = ace.edit("yourcode");
-      editor.setTheme("ace/theme/textmate");
-      editor.getSession().setMode("ace/mode/python");
   </script>
 
 </html>
