added random example

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -101,6 +101,26 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="media">
+                        <div class="media-left">
+                            <img class="media-object" src="/images/ex3.png" style="width:64px; height:64px;">
+                        </div>
+                        <div class="media-body row">
+                            <div class="col-sm-6">
+                                <h4 class="media-heading">Random Lines</h4>
+
+                                <p>Draws random lines forever!</p>
+                            </div>
+                            <div class="col-sm-6" style="padding-top:10px;">
+                                <button class='button btn-sm btn-primary' onclick="ex3();">Load Example</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
