added buggy program examples

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -121,6 +121,90 @@
                 </div>
             </div>
 
+            <h3>Buggy Programs</h3>
+            <p>
+                These programs are good for practicing debugging! Each of them has something wrong
+                and does not work quite as expected, try to fix them.
+            </p>
+
+            <div class="row">
+                <div class="col-sm-6">
+
+                    <div class="media">
+                        <div class="media-left">
+                            <img class="media-object" src="/images/buggy1.png" style="width:64px; height:64px;">
+                        </div>
+                        <div class="media-body row">
+                            <div class="col-sm-6">
+                                <h4 class="media-heading">Buggy Square I</h4>
+
+                                <p>Trys to draw a perfect square but makes a mistake!</p>
+                            </div>
+                            <div class="col-sm-6" style="padding-top:10px;">
+                                <button class='button btn-sm btn-primary' onclick="buggy1();">Debug It</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-6">
+                    <div class="media">
+                        <div class="media-left">
+                            <img class="media-object" src="/images/buggy2.png" style="width:64px; height:64px;">
+                        </div>
+                        <div class="media-body row">
+                            <div class="col-sm-6">
+                                <h4 class="media-heading">Buggy Square II</h4>
+
+                                <p>Trys to draw a perfect square but doesn't quite finish!</p>
+                            </div>
+                            <div class="col-sm-6" style="padding-top:10px;">
+                                <button class='button btn-sm btn-primary' onclick="buggy2();">Debug It</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+
+                    <div class="media">
+                        <div class="media-left">
+                            <img class="media-object" src="/images/buggy3.png" style="width:64px; height:64px;">
+                        </div>
+                        <div class="media-body row">
+                            <div class="col-sm-6">
+                                <h4 class="media-heading">Buggy Spiral I</h4>
+
+                                <p>Trys to draw a spiral but it goes off the screen!</p>
+                            </div>
+                            <div class="col-sm-6" style="padding-top:10px;">
+                                <button class='button btn-sm btn-primary' onclick="buggy3();">Debug It</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-6">
+                    <div class="media">
+                        <div class="media-left">
+                            <img class="media-object" src="/images/buggy4.png" style="width:64px; height:64px;">
+                        </div>
+                        <div class="media-body row">
+                            <div class="col-sm-6">
+                                <h4 class="media-heading">Buggy Spiral II</h4>
+
+                                <p>Trys to draw a spiral but actually draws a circle!</p>
+                            </div>
+                            <div class="col-sm-6" style="padding-top:10px;">
+                                <button class='button btn-sm btn-primary' onclick="buggy4();">Debug It</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
